chore(project): convert java 8